@@ -3,6 +3,7 @@
 	DeprecationWarning (this makes HEAD no longer completely defunct);
 	Add checks for EventRef class type
 	* src/EditPerson.py: typo
+	* src/plugins/TestcaseGenerator.py:  Support for event references.
 
 2005-05-26  Alex Roitman  <shura@gramps-project.org>
 	* src/RelLib.py (EventRef): Add class.
